# OOP_hw5

./: CMakeLists.txt
src/: hw5_task1.cpp  hw5_task2.cpp  hw5_task3.cpp
